--- a/applyService.html
+++ b/applyService.html
@@ -57,7 +57,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -73,7 +73,7 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle">
                                 <span class="f-24">申请售后</span>
@@ -81,16 +81,16 @@
                             <div class="orderDetailBlock">
                                 <div class="tableHead applyServiceHead">
                                     <div class="row">
-                                        <div class="col-lg-4">
+                                        <div class="col-md-4">
                                             <div>商品</div>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-md-4">
                                             <div>包装清单</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>赠品</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>购买数量</div>
                                         </div>
                                     </div>
@@ -98,23 +98,23 @@
                                 <div class="tableContent">
                                     <div class="myOrderList">
                                         <div class="row">
-                                            <div class="col-lg-4">
+                                            <div class="col-md-4">
                                                 <div class="goods orderGoods clearfix">
                                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                                     <p class="goods-name">卡拉OK E5</p>
                                                     <p class="goods-color">颜色：黑色</p>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4">
+                                            <div class="col-md-4">
                                                 <div class="myOrderAccess">
                                                     麦克风×1、底座×1、遥控器×1、电源适配器×1、
                                                     音频线×1、U盘×1、使用手册×1、电池×6
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderGift"><span class="no_gift"></span></div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderQuality">1</div>
                                             </div>
                                         </div>
@@ -190,7 +190,7 @@
                                     <p>收货地址：<span class="clientAdd">广东省深圳市宝安区西乡街道永丰社区9区</span></p>
                                 </div>
                                 <div class="orderDetail_content">
-                                    <a class="gotoBuy offerReview" href="#">提交审核</a>
+                                    <a class="gotoBuy offerReview" href="applySuccess.html">提交审核</a>
                                     <span>提交服务订单后，售后专员会与您电话沟通，请保持手机畅通</span>
                                 </div>
                             </div>
