--- a/myInfo.html
+++ b/myInfo.html
@@ -56,7 +56,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -72,7 +72,7 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle myInfoTitle">
                                 <span class="f-24">账户资料</span>
@@ -368,10 +368,10 @@
                 <p class="modal-tips">解除绑定后将不能用此QQ快捷登录音特账号</p>
                 <div class="modal-btns">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <button type="button" class="btn-red">确定</button>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <button type="button" class="btn-qx" data-dismiss="modal">取消</button>
                         </div>
                     </div>
