--- a/okPay.html
+++ b/okPay.html
@@ -68,8 +68,8 @@
                     <div class="payOrder">
                         <p class="payOrder-p">您已成功付款：<span>¥1999.00</span></p>
                         <p class="orderInfo">收货信息：<span class="order-name">吴狄</span> <span class="order-call">180****3329</span> <span class="order-add">广东省深圳市宝安区西乡街道永丰社区9区</span></p>
-                        <a class="checkOrder" href="#">查看订单详情</a>
-                        <a class="checkOrder" href="#">回到商城</a>
+                        <a class="checkOrder" href="orderDetail.html">查看订单详情</a>
+                        <a class="checkOrder" href="index.html">回到商城</a>
                     </div>
                 </div>
             </div>
