--- a/orderDetail.html
+++ b/orderDetail.html
@@ -56,7 +56,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -72,12 +72,12 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle">
                                 <span class="f-24">订单详情</span>
                             </div>
-                            <div class="orderDetailBlock unpaid">
+                            <div class="orderDetailBlock paid">
                                 <div class="orderDetailProcess">
                                     <div class="line">
                                         <div class="redLine1"></div>
@@ -86,26 +86,26 @@
                                         <div class="redLine4"></div>
                                     </div>
                                     <div class="row stateRow">
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailOfferOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>提交订单</p>
                                                 <p class="offerTime">2017-09-14  13：36：45</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailFendOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>付款成功、商品发货</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailDeliverOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>交易成功</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailFinishOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>关闭订单</p>
@@ -125,16 +125,16 @@
                                 </div>
                                 <div class="tableHead orderDetail_tableHead">
                                     <div class="row">
-                                        <div class="col-lg-5">
+                                        <div class="col-md-5">
                                             <div>商品</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>单价（元）</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>数量</div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div>状态</div>
                                         </div>
                                     </div>
@@ -146,20 +146,20 @@
                                 <div class="tableContent">
                                     <div class="myOrderList">
                                         <div class="row">
-                                            <div class="col-lg-5">
+                                            <div class="col-md-5">
                                                 <div class="goods orderGoods clearfix">
                                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                                     <p class="goods-name">卡拉OK E5</p>
                                                     <p class="goods-color">颜色：黑色</p>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderMoney">1999.00</div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderNumber">1</div>
                                             </div>
-                                            <div class="col-lg-3">
+                                            <div class="col-md-3">
                                                 <div class="myOrderState orderDetail_state">待付款</div>
                                             </div>
                                         </div>
