--- a/shopCart.html
+++ b/shopCart.html
@@ -61,232 +61,232 @@
                 <div id="cartTable">
                     <div class="carHead">
                         <div class="row">
-                            <div class="col-lg-2">
+                            <div class="col-md-2">
                                 <div class="carHead_left">
                                     <input class="check-all check" type="checkbox" id="all"/>
                                     <label for="all"><span></span>全选</label>
                                 </div>
                             </div>
-                            <div class="col-lg-3">商品</div>
-                            <div class="col-lg-2">单价</div>
-                            <div class="col-lg-2">数量</div>
-                            <div class="col-lg-2">小计</div>
-                            <div class="col-lg-1"><div class="carHead_right">操作</div></div>
+                            <div class="col-md-3">商品</div>
+                            <div class="col-md-2">单价</div>
+                            <div class="col-md-2">数量</div>
+                            <div class="col-md-2">小计</div>
+                            <div class="col-md-1"><div class="carHead_right">操作</div></div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose1"/>
                                     <label for="choose1"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price" id="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price" id="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal" id="subtotal">5999.88</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal" id="subtotal">5999.88</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose2"/>
                                     <label for="choose2"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal">1999.00</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal">1999.00</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose3"/>
                                     <label for="choose3"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal">1999.00</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal">1999.00</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose4"/>
                                     <label for="choose4"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal">1999.00</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal">1999.00</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose5"/>
                                     <label for="choose5"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal">1999.00</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal">1999.00</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-lg-1 item_left">
+                            <div class="col-md-1 item_left">
                                 <div class="checkbox">
                                     <input class="check-one check" type="checkbox" id="choose6"/>
                                     <label for="choose6"><span></span></label>
                                 </div>
                             </div>
-                            <div class="col-lg-4 item_img">
+                            <div class="col-md-4 item_img">
                                 <div class="goods">
                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                     <p class="goods-name">卡拉OK E5</p>
                                     <p class="goods-color">颜色：黑色</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="price">5999.88</span></div>
-                            <div class="col-lg-2 item_height">
+                            <div class="col-md-2 item_height"><span class="price">5999.88</span></div>
+                            <div class="col-md-2 item_height">
                                 <div class="count">
                                     <span class="reduce"></span>
                                     <input class="count-input" type="text" value="1"/>
                                     <span class="add">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-2 item_height"><span class="subtotal">1999.00</span></div>
-                            <div class="col-lg-1 item_height">
+                            <div class="col-md-2 item_height"><span class="subtotal">1999.00</span></div>
+                            <div class="col-md-1 item_height">
                                 <div class="operation"><span class="delete iconfont icon-close"></span></div>
                             </div>
                         </div>
                         <!--有赠品-->
                         <div class="gifts">
                             <div class="row">
-                                <div class="col-lg-10 col-lg-offset-1">
+                                <div class="col-md-10 col-md-offset-1">
                                     <div class="myOrderList_gifts">
                                         <div class="myOrderList_gifts_out">
                                             <img class="myOrderList_up" src="images/up-angle.png">
                                             <div class="row">
-                                                <div class="col-lg-5">
+                                                <div class="col-md-5">
                                                     <div class="orderGoods clearfix">
                                                         <span class="gifts_t">赠品：</span>
                                                         <div class="gifts_img"><img src="images/gifts.jpg" width="36" height="45"></div>
                                                         <span class="gifts_name">E5充电锂电池</span>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-2">
+                                                <div class="col-md-2">
                                                     <div class="myGiftMoney">13.5</div>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-md-3">
                                                     <div class="myGiftNumber">1</div>
                                                 </div>
-                                                <div class="col-lg-1"></div>
-                                                <div class="col-lg-1"></div>
+                                                <div class="col-md-1"></div>
+                                                <div class="col-md-1"></div>
                                             </div>
                                             <div class="row">
-                                                <div class="col-lg-5">
+                                                <div class="col-md-5">
                                                     <div class="orderGoods clearfix">
                                                         <span class="gifts_t"></span>
                                                         <div class="gifts_img"><img src="images/gifts.jpg" width="36" height="45"></div>
                                                         <span class="gifts_name">E5充电锂电池</span>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-2">
+                                                <div class="col-md-2">
                                                     <div class="myGiftMoney">13.5</div>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-md-3">
                                                     <div class="myGiftNumber">1</div>
                                                 </div>
-                                                <div class="col-lg-1"></div>
-                                                <div class="col-lg-1"></div>
+                                                <div class="col-md-1"></div>
+                                                <div class="col-md-1"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -301,7 +301,7 @@
                         <a class="pull-left delete" id="deleteAll" href="javascript:;">删除选中商品</a>
                         <div class="pull-left selected" id="selected">共<span id="chooseAll"></span>件商品，已选商品<span id="selectedTotal">0</span>件</div>
                         <input type="hidden" id="cartTotalPrice" />
-                        <div class="pull-right total">合计(不含运费)：<span class="priceIcon">￥</span><span id="priceTotal">0.00</span><a class="closing" href="#" onclick="getTotal();">去结算</a></div>
+                        <div class="pull-right total">合计(不含运费)：<span class="priceIcon">￥</span><span id="priceTotal">0.00</span><a class="closing" href="sureOrder.html" onclick="getTotal();">去结算</a></div>
                     </div>
                 </div>
                 <div id="footBlank" style="height: 82px;"></div>
