--- a/address.html
+++ b/address.html
@@ -56,7 +56,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -72,14 +72,14 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle discountTitle clearfix">
                                 <span class="f-24">收货地址</span>
                             </div>
                             <div class="orderAddList addressBlock clearfix">
                                 <div class="row">
-                                    <div class="col-lg-4 defaultAdd">
+                                    <div class="col-md-4 defaultAdd">
                                         <div class="addMenu">
                                             <p class="clearfix"><span class="addName">吴狄</span><span class="addNum pull-right">185****5674</span></p>
                                             <p class="addMenu-add">广东省 深圳市 宝安区 西乡街道 永丰社区9区</p>
@@ -87,7 +87,7 @@
                                             <img class="addGou" src="images/addgou.png">
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-md-4">
                                         <div class="addMenu">
                                             <p class="clearfix"><span class="addName">吴狄</span><span class="addNum pull-right">185****5674</span></p>
                                             <p class="addMenu-add">广东省 深圳市 宝安区 西乡街道 永丰社区9区</p>
@@ -95,7 +95,7 @@
                                             <img class="addGou" src="images/addgou.png">
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-md-4">
                                         <div class="addMenu">
                                             <p class="clearfix"><span class="addName">吴狄</span><span class="addNum pull-right">185****5674</span></p>
                                             <p class="addMenu-add">广东省 深圳市 宝安区 西乡街道 永丰社区9区</p>
@@ -103,7 +103,7 @@
                                             <img class="addGou" src="images/addgou.png">
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-md-4">
                                         <div class="addMenu-new" data-toggle="modal" data-target="#addModal">
                                             <div class="addMenu-div">
                                                 <i class="iconfont icon-jiahao"></i>
@@ -230,10 +230,10 @@
                 <h4 class="modal-title deleteModal_t" id="deleteModalLabel">确定删除该地址?</h4>
                 <div class="modal-btns">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <button type="button" class="btn-qx ok" data-dismiss="modal">确定</button>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <button type="button" class="btn-red cancel" data-dismiss="modal">取消</button>
                         </div>
                     </div>
