--- a/deliveryInfo.html
+++ b/deliveryInfo.html
@@ -56,7 +56,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -71,7 +71,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle">
                                 <span class="f-24">物流信息</span>
@@ -79,13 +79,13 @@
                             <div class="orderDetailBlock successPick">
                                 <div class="deliveryInfo_block">
                                     <div class="row">
-                                        <div class="col-lg-4">
+                                        <div class="col-md-4">
                                             <p class="deliveryInfo_p text-left">快递单号： <span class="track_num">70091320298476</span></p>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-md-4">
                                             <p class="deliveryInfo_p text-center">物流公司： <span class="track_com">顺丰快递</span></p>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-md-4">
                                             <p class="deliveryInfo_p text-right">客服电话：  <span class="track_call">4009565656</span></p>
                                         </div>
                                     </div>
@@ -98,26 +98,26 @@
                                         <div class="redLine4"></div>
                                     </div>
                                     <div class="row stateRow">
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailOfferOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>等待揽件</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailFendOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>运输途中</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailDeliverOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>正在派送</p>
                                                 <p class="deliveryTime">2017-09-14  13：36：45</p>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div class="detailFinishOrder">
                                                 <div class="detailCircle"></div>
                                                 <p>签收成功</p>
