--- a/discount.html
+++ b/discount.html
@@ -56,7 +56,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -72,7 +72,7 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle discountTitle clearfix">
                                 <span class="f-24">优惠券</span>
@@ -80,42 +80,42 @@
                             </div>
                             <div class="discountImgs">
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg1.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg3.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-4">
                                         <a class="discountImg" href="page.html">
                                             <img class="img-responsive" src="images/discountImg2.jpg">
                                         </a>
