--- a/onlinePay.html
+++ b/onlinePay.html
@@ -93,7 +93,10 @@
                 </ul>
                 <div class="goPay pull-right">
                     实付金额：<span class="priceIcon">￥</span><span id="payPrice">1999.00</span>
-                    <a class="goPay-a" href="#">立即支付</a>
+                    <a class="goPay-a" href="javascript:void(0)" onclick="pay();">立即支付</a>
+                </div>
+                <div id="tips" class="tips">
+                    请先选择在线支付方式！
                 </div>
             </div>
         </div>
@@ -196,16 +199,65 @@
         <div class="footerBar">© dameigong.cn 2017 皖ICP备17012709号</div>
     </footer>
 </div>
+<!--codeModal-->
+<div class="modal myInfoModal addressModal fade" id="codeModal" tabindex="-1" role="dialog" aria-labelledby="codeModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <i class="close iconfont icon-close" data-dismiss="modal" aria-label="Close" aria-hidden="true"></i>
+                <div class="modal-title" id="codeModalLabel">
+                    扫一扫付款
+                </div>
+            </div>
+            <div class="modal-body text-center">
+                <div class="codeBody" id="aliPay">
+                    <img src="images/timg.jpg">
+                </div>
+                <div class="codeBody" id="wechatPay">
+                    <img src="images/wechatPay.png">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript">
     $(function () {
+        //  点击订单详情出现更多订单信息
         $('#js_moreDetail').click(function () {
             $('.moreOrderDetail').toggleClass('dis_block');
             $(this).find('.iconfont').toggleClass('icon-down-trangle icon-up');
-        })
-    })
+        });
+
+
+    });
+
+    //  点击立即支付跳出二维码
+    function pay() {
+        var val=$('input:radio[name="item"]:checked').val();
+        if(val==null){ //如果没有选择任何支付方式则弹出提示框
+            $('#tips').fadeIn();
+            setTimeout($('#tips').fadeOut(),100000);
+            return false;
+        }
+        else if(val=="支付宝支付"){ //选择支付宝则展示支付宝的二维码
+            $('#codeModal').modal();
+            $('#codeModal').on('shown.bs.modal', function () {
+                $('#wechatPay').hide();
+                $('#aliPay').show();
+            })
+        }
+        else if(val=="微信支付"){ //选择微信则展示微信的二维码
+            $('#codeModal').modal();
+            $('#codeModal').on('shown.bs.modal', function () {
+                $('#wechatPay').show();
+                $('#aliPay').hide();
+            })
+        }
+    }
 </script>
 </body>
 </html>
