--- a/serviceDetail.html
+++ b/serviceDetail.html
@@ -57,7 +57,7 @@
             <!--个人中心-->
             <div class="person">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-md-2">
                         <div class="personBlock">
                             <div class="userInfo">
                                 <img class="male" src="images/male.jpg">
@@ -73,7 +73,7 @@
                             <div class="personBg"></div>
                         </div>
                     </div>
-                    <div class="col-lg-10">
+                    <div class="col-md-10">
                         <div class="myOrder">
                             <div class="orderTitle">
                                 <span class="f-24">进度详情</span>
@@ -132,16 +132,16 @@
                                 </div>
                                 <div class="tableHead orderDetail_tableHead">
                                     <div class="row">
-                                        <div class="col-lg-5">
+                                        <div class="col-md-5">
                                             <div>商品</div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-md-3">
                                             <div>包装清单</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>赠品</div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-md-2">
                                             <div>购买数量</div>
                                         </div>
                                     </div>
@@ -153,23 +153,23 @@
                                 <div class="tableContent">
                                     <div class="myOrderList">
                                         <div class="row">
-                                            <div class="col-lg-4">
+                                            <div class="col-md-4">
                                                 <div class="goods orderGoods clearfix">
                                                     <div class="goods-img"><img src="images/product1.png" alt=""/></div>
                                                     <p class="goods-name">卡拉OK E5</p>
                                                     <p class="goods-color">颜色：黑色</p>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4">
+                                            <div class="col-md-4">
                                                 <div class="myOrderAccess">
                                                     麦克风×1、底座×1、遥控器×1、电源适配器×1、
                                                     音频线×1、U盘×1、使用手册×1、电池×6
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderGift"><span class="no_gift"></span></div>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-md-2">
                                                 <div class="myOrderQuality">1</div>
                                             </div>
                                         </div>
@@ -388,7 +388,7 @@
                 <div id="orderWordsDiv">
                     <form class="">
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-md-12">
                                 <textarea rows="5" class="sureOrder-text sureOrder-words" maxlength="200">7天无理由退货</textarea>
                             </div>
                         </div>
@@ -401,7 +401,7 @@
                         <p class="orderDetail_tips">为了更快帮您解决问题，请上传图片（最多可上传5张）</p>
                         <div class="form-group">
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-md-12">
                                     <button type="button" class="btn-red" data-dismiss="modal">更新描述</button>
                                 </div>
                             </div>
